# algorithm

./: .gitignore  BigStrit.hpp  CMakeLists.txt  Catch2Tests.cpp  Counter.cpp  Counter.hpp  Dice.cpp  Dice.hpp  DicePoker.cpp  DicePoker.hpp  Full.hpp  HigherNumber.hpp  NextState.cpp  NextState.hpp  OnePair.hpp  Poker.hpp  PokerStates.hpp  Quadruplets.hpp  README.md  Range.hpp  SimpleTest.cpp  SimpleTest.hpp  SmallStrit.hpp  Sumfing.txt  Triplet.hpp  TwoPair.hpp  draft.txt  main.cpp  task1.cpp  task1.txt  task2.txt  task3.txt  task4.txt
PokerStates/: BigStrit.hpp  Full.hpp  HigherNumber.hpp  OnePair.hpp  Poker.hpp  PokerStates.hpp  Quadruplets.hpp  SmallStrit.hpp  Triplet.hpp  TwoPair.hpp
